# wg-manager

./: .gitlab-ci.yml  README.md  agent_report.txt  cc_plan_output.json  plan_output_485669_cc_plan_output.json  pyproject.toml  wg-manager.org
ci_scripts/: format_cleanup_completion_msg.py  format_cleanup_detection_msg.py  gitlab-pipeline-trigger.sh  parse_claude_code_result.py  test_run_from_emacs.sh
reports/2026/01/: 10-client-sync-mechanism.md
wg_manager/: __init__.py  add_peer.py  cli.py  config.py  deploy.py  manager.py  parser.py  remove_peer.py  ssh.py
