[project]
name = "wg-manager"
version = "0.1.1"
description = "WireGuard 管理工具 - 服务端配置、客户端管理、密钥生成、配置导出、SSH远程管理"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "yb" }
]
keywords = ["wireguard", "vpn", "network", "cli", "manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "qrcode>=7.4",
]

[project.urls]
Homepage = "https://github.com/leaf0412/wg-manager"
Repository = "https://github.com/leaf0412/wg-manager"
Issues = "https://github.com/leaf0412/wg-manager/issues"

[project.scripts]
wg-manager = "wg_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wg_manager"]
